--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.hdfgroup</groupId>
+            <artifactId>hdf-java</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>ome</groupId>
             <artifactId>formats-gpl</artifactId>
         </dependency>
