--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.scijava</groupId>
+        <artifactId>pom-scijava</artifactId>
+        <version>22.3.0</version>
+        <relativePath />
+    </parent>
+
 
     <groupId>de.embl.cba</groupId>
     <artifactId>fiji_plugin_bigDataTools</artifactId>
@@ -93,12 +100,7 @@
         <enforcer.skip>true</enforcer.skip>
     </properties>
 
-    <parent>
-        <groupId>org.scijava</groupId>
-        <artifactId>pom-scijava</artifactId>
-        <version>22.3.0</version>
-        <relativePath />
-    </parent>
+
 
     <repositories>
 
@@ -120,6 +122,17 @@
 
     <dependencies>
 
+
+        <dependency>
+            <groupId>sc.fiji</groupId>
+            <artifactId>bigdataviewer-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>sc.fiji</groupId>
+            <artifactId>bigdataviewer_fiji</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>net.imagej</groupId>
             <artifactId>imagej-legacy</artifactId>
@@ -128,6 +141,11 @@
         <dependency>
             <groupId>net.imagej</groupId>
             <artifactId>imagej</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.imagej</groupId>
+            <artifactId>imagej-common</artifactId>
         </dependency>
 
         <dependency>
