--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,13 @@
     <parent>
         <groupId>org.scijava</groupId>
         <artifactId>pom-scijava</artifactId>
-        <version>22.3.0</version>
+        <version>23.1.1</version>
         <relativePath />
     </parent>
 
-
     <groupId>de.embl.cba</groupId>
     <artifactId>fiji_plugin_bigDataTools</artifactId>
-    <version>0.5.5</version>
+    <version>0.5.53</version>
 
     <name>Fiji plugin for big image data</name>
     <description>A plugin for big image data.</description>
@@ -183,5 +182,13 @@
 
     </dependencies>
 
+
+    <distributionManagement>
+        <repository>
+            <id>bintray-embl-cba-snapshots</id>
+            <name>embl-cba-snapshots</name>
+            <url>https://api.bintray.com/maven/embl-cba/snapshots/fiji-plugin-bigDataTools/;publish=1</url>
+        </repository>
+    </distributionManagement>
 
 </project>
