Adapt plugins.config

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,6 +1,6 @@
-# Name: Open Stacks As VirtualStack
+# Name: Big Data Converter
 # Author: Christian Tischer
-# Version: 0.0.1
+# Version: 0.5.0
 
 # A single .jar file can contain multiple plugins, specified in separate lines.
 #
@@ -9,6 +9,6 @@
 # If something like ("<arg>") is appended to the class name, the setup() method
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
-Plugins>BigDataTools, "Data Streaming Tools", de.embl.cba.bigdataconverter.dataStreamingTools.DataStreamingToolsIJ1Plugin
-Plugins>BigDataTools, "Big Data Tracker", de.embl.cba.bigdataconverter.track.BigDataTrackerIJ1Plugin
+Plugins>BigDataTools, "Big Data Converter", de.embl.cba.bigdataconverter.BigDataConverterPlugIn
+
 
