--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,4 +1,4 @@
-# Name: Big Data Converter
+# Name: Big Data Processor
 # Author: Christian Tischer
 # Version: 0.5.0
 
@@ -9,6 +9,6 @@
 # If something like ("<arg>") is appended to the class name, the setup() method
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
-Plugins>BigDataTools, "Big Data Converter", de.embl.cba.bigdataconverter.BigDataConverterPlugIn
+Plugins>BigDataTools, "Big Data Processor", de.embl.cba.bigdataprocessor.BigDataProcessorPlugIn
 
 
