--- a/pom.xml
+++ b/pom.xml
@@ -1,174 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>de.embl.cba</groupId>
-        <artifactId>pom-embl-cba</artifactId>
-        <version>0.3.01</version>
-        <relativePath>../pom-embl-cba</relativePath>
-    </parent>
-
-    <groupId>de.embl.cba</groupId>
-    <artifactId>fiji_plugin_bigDataProcessor</artifactId>
-    <version>0.6.00</version>
-
-    <name>Fiji plugin for big image data inspection, processing and saving.</name>
-    <description>A plugin for big image data inspection, processing and saving..</description>
-    <inceptionYear>2017</inceptionYear>
-    <organization>
-        <name>EMBL</name>
-        <url>http://embl.de/</url>
-    </organization>
-    <licenses>
-        <license>
-            <name>Simplified BSD License</name>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-
-    <url>https://github.com/tischi/fiji-plugin-bigDataProcessor</url>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>${main-class}</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-
-    <developers>
-        <developer>
-            <id>tischi</id>
-            <name>Christian Tischer</name>
-            <roles>
-                <role>lead</role>
-                <role>developer</role>
-                <role>debugger</role>
-                <role>reviewer</role>
-                <role>support</role>
-                <role>maintainer</role>
-            </roles>
-        </developer>
-    </developers>
-    <contributors>
-        <contributor>
-            <name>None</name>
-        </contributor>
-    </contributors>
-
-    <scm>
-        <connection>scm:git:git://github.com/embl-cba/fiji-plugin-bigDataProcessor</connection>
-        <developerConnection>scm:git:git@github.com/embl-cba/fiji-plugin-bigDataProcessor</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://github.com/embl-cba/fiji-plugin-bigDataProcessor</url>
-    </scm>
-
-    <mailingLists>
-        <mailingList>
-            <name>ImageJ Forum</name>
-            <archive>http://forum.imagej.net/</archive>
-        </mailingList>
-    </mailingLists>
-
-    <issueManagement>
-        <system>GitHub Issues</system>
-        <url>https://github.com/embl-cba/fiji-plugin-bigDataProcessor/issues</url>
-    </issueManagement>
-    <ciManagement>
-        <system>None</system>
-    </ciManagement>
-
-    <properties>
-        <package-name>de.embl.cba.bigdataprocessor</package-name>
-        <license.licenseName>bsd_2</license.licenseName>
-        <license.copyrightOwners>EMBL</license.copyrightOwners>
-        <imagej.app.directory>/Applications/Fiji.app/</imagej.app.directory>
-        <enforcer.skip>false</enforcer.skip>
-    </properties>
-
-
-
-    <repositories>
-
-        <repository>
-            <id>imagej.public</id>
-            <url>http://maven.imagej.net/content/groups/public</url>
-        </repository>
-
-        <repository>
-            <!-- needed for
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>de.embl.cba</groupId>
+		<artifactId>pom-embl-cba</artifactId>
+		<version>0.3.8</version>
+	</parent>
+	<groupId>de.embl.cba</groupId>
+	<artifactId>fiji-plugin-bigDataProcessor</artifactId>
+	<version>0.7.0</version>
+	<name>Fiji plugin for big image data inspection, processing and saving.</name>
+	<description>A plugin for big image data inspection, processing and saving..</description>
+	<inceptionYear>2017</inceptionYear>
+	<organization>
+		<name>EMBL</name>
+		<url>http://embl.de/</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Simplified BSD License</name>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<url>https://github.com/embl-cba/fiji-plugin-bigDataProcessor</url>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>${main-class}</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<developers>
+		<developer>
+			<id>tischi</id>
+			<name>Christian Tischer</name>
+			<roles>
+				<role>lead</role>
+				<role>developer</role>
+				<role>debugger</role>
+				<role>reviewer</role>
+				<role>support</role>
+				<role>maintainer</role>
+			</roles>
+		</developer>
+	</developers>
+	<contributors>
+		<contributor>
+			<name>None</name>
+		</contributor>
+	</contributors>
+	<scm>
+		<connection>scm:git:git://github.com/embl-cba/fiji-plugin-bigDataProcessor</connection>
+		<developerConnection>scm:git:git@github.com/embl-cba/fiji-plugin-bigDataProcessor</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/embl-cba/fiji-plugin-bigDataProcessor</url>
+	</scm>
+	<mailingLists>
+		<mailingList>
+			<name>ImageJ Forum</name>
+			<archive>http://forum.imagej.net/</archive>
+		</mailingList>
+	</mailingLists>
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/embl-cba/fiji-plugin-bigDataProcessor/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>None</system>
+	</ciManagement>
+	<properties>
+		<package-name>de.embl.cba.bigdataprocessor</package-name>
+		<license.licenseName>bsd_2</license.licenseName>
+		<license.copyrightOwners>EMBL</license.copyrightOwners>
+		<imagej.app.directory>/Applications/Fiji.app/</imagej.app.directory>
+		<enforcer.skip>true</enforcer.skip>
+	</properties>
+	<distributionManagement>
+		<repository>
+			<id>bintray-tischi-snapshots</id>
+			<name>tischi-snapshots</name>
+			<url>https://api.bintray.com/maven/tischi/snapshots/fiji-plugin-bigDataProcessor:/;publish=1</url>
+		</repository>
+	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>imagej.public</id>
+			<url>http://maven.imagej.net/content/groups/public</url>
+		</repository>
+		<!-- for CBA dependencies -->
+		<repository>
+			<id>bintray-tischi-snapshots</id>
+			<name>bintray</name>
+			<url>https://dl.bintray.com/tischi/snapshots</url>
+		</repository>
+		<repository>
+			<!-- needed for
               - mpicbg.imglib.algorithm
               - mpicbg.imglib.image
             -->
-            <id>imagej.releases</id>
-            <url>http://maven.imagej.net/content/repositories/releases</url>
-        </repository>
-
-    </repositories>
-
-    <dependencies>
-
-        <dependency>
-            <groupId>sc.fiji</groupId>
-            <artifactId>bigdataviewer-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>sc.fiji</groupId>
-            <artifactId>bigdataviewer_fiji</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>net.imagej</groupId>
-            <artifactId>imagej-legacy</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>net.imagej</groupId>
-            <artifactId>imagej</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>net.imagej</groupId>
-            <artifactId>imagej-common</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>net.imagej</groupId>
-            <artifactId>ij</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>net.imglib2</groupId>
-            <artifactId>imglib2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>de.embl.cba</groupId>
-            <artifactId>imaris-writer</artifactId>
-        </dependency>
-
-    </dependencies>
-
-    <distributionManagement>
-        <repository>
-            <id>bintray-embl-cba-snapshots</id>
-            <name>embl-cba-snapshots</name>
-            <url>https://api.bintray.com/maven/embl-cba/snapshots/fiji-plugin-bigDataTools/;publish=1</url>
-        </repository>
-    </distributionManagement>
-
+			<id>imagej.releases</id>
+			<url>http://maven.imagej.net/content/repositories/releases</url>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigdataviewer-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigdataviewer_fiji</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej-legacy</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>de.embl.cba</groupId>
+			<artifactId>imaris-writer</artifactId>
+		</dependency>
+	</dependencies>
 </project>
