--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>de.embl.cba</groupId>
-		<artifactId>pom-embl-cba</artifactId>
-		<version>0.3.8</version>
+		<groupId>org.scijava</groupId>
+		<artifactId>pom-scijava</artifactId>
+		<version>27.0.1</version>
 	</parent>
 	<groupId>de.embl.cba</groupId>
-	<artifactId>fiji-plugin-bigDataProcessor</artifactId>
-	<version>0.7.0</version>
+	<artifactId>fiji-plugin-bigDataProcessor_</artifactId>
+	<version>0.7.2</version>
 	<name>Fiji plugin for big image data inspection, processing and saving.</name>
 	<description>A plugin for big image data inspection, processing and saving..</description>
 	<inceptionYear>2017</inceptionYear>
@@ -86,7 +86,7 @@
 		<repository>
 			<id>bintray-tischi-snapshots</id>
 			<name>tischi-snapshots</name>
-			<url>https://api.bintray.com/maven/tischi/snapshots/fiji-plugin-bigDataProcessor:/;publish=1</url>
+			<url>https://api.bintray.com/maven/tischi/snapshots/fiji-plugin-bigDataProcessor/;publish=1</url>
 		</repository>
 	</distributionManagement>
 	<repositories>
@@ -141,6 +141,7 @@
 		<dependency>
 			<groupId>de.embl.cba</groupId>
 			<artifactId>imaris-writer</artifactId>
+			<version>0.2.1</version>
 		</dependency>
 	</dependencies>
 </project>
