Change package name

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -9,6 +9,6 @@
 # If something like ("<arg>") is appended to the class name, the setup() method
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
-Plugins>BigDataTools, "BigDataProcessor", de.embl.cba.bigdataprocessor.BigDataProcessorPlugIn
+Plugins>BigDataProcessor, "BigDataProcessor1", de.embl.cba.bigdataprocessor.BigDataProcessorPlugIn
 
 
