--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 		<version>27.0.1</version>
 	</parent>
 	<groupId>de.embl.cba</groupId>
-	<artifactId>fiji-plugin-bigDataProcessor_</artifactId>
-	<version>0.7.2</version>
+	<artifactId>bigDataProcessor1_</artifactId>
+	<version>0.7.3</version>
 	<name>Fiji plugin for big image data inspection, processing and saving.</name>
 	<description>A plugin for big image data inspection, processing and saving..</description>
 	<inceptionYear>2017</inceptionYear>
