--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>27.0.1</version>
+		<version>29.2.1</version>
 	</parent>
 	<groupId>de.embl.cba</groupId>
 	<artifactId>bigDataProcessor1_</artifactId>
-	<version>0.7.3</version>
+	<version>0.7.4</version>
 	<name>Fiji plugin for big image data inspection, processing and saving.</name>
 	<description>A plugin for big image data inspection, processing and saving..</description>
 	<inceptionYear>2017</inceptionYear>
@@ -81,6 +81,11 @@
 		<license.copyrightOwners>EMBL</license.copyrightOwners>
 		<imagej.app.directory>/Applications/Fiji.app/</imagej.app.directory>
 		<enforcer.skip>true</enforcer.skip>
+
+		<bioformats.version>6.1.0-m2</bioformats.version>
+		<ome.version>6.0.1</ome.version>
+		<imaris-writer.version>0.2.1</imaris-writer.version>
+		<imagej-utils.version>0.5.3</imagej-utils.version>
 	</properties>
 	<distributionManagement>
 		<repository>
@@ -138,10 +143,16 @@
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
 		</dependency>
+		<!-- CBA -->
 		<dependency>
 			<groupId>de.embl.cba</groupId>
 			<artifactId>imaris-writer</artifactId>
-			<version>0.2.1</version>
+			<version>${imaris-writer.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>de.embl.cba</groupId>
+			<artifactId>imagej-utils</artifactId>
+			<version>${imagej-utils.version}</version>
 		</dependency>
 	</dependencies>
 </project>
