--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>29.2.1</version>
+		<version>30.0.0</version>
 	</parent>
 	<groupId>de.embl.cba</groupId>
 	<artifactId>bigDataProcessor1_</artifactId>
-	<version>0.7.4</version>
+	<version>0.7.5</version>
 	<name>Fiji plugin for big image data inspection, processing and saving.</name>
 	<description>A plugin for big image data inspection, processing and saving..</description>
 	<inceptionYear>2017</inceptionYear>
@@ -23,20 +23,20 @@
 		</license>
 	</licenses>
 	<url>https://github.com/embl-cba/fiji-plugin-bigDataProcessor</url>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>${main-class}</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<!--	<build>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<artifactId>maven-jar-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<archive>-->
+<!--						<manifest>-->
+<!--							<mainClass>${main-class}</mainClass>-->
+<!--						</manifest>-->
+<!--					</archive>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build>-->
 	<developers>
 		<developer>
 			<id>tischi</id>
@@ -79,13 +79,14 @@
 		<package-name>de.embl.cba.bigdataprocessor</package-name>
 		<license.licenseName>bsd_2</license.licenseName>
 		<license.copyrightOwners>EMBL</license.copyrightOwners>
-		<imagej.app.directory>/Users/tischer/Desktop/Fiji-bdp2.app</imagej.app.directory>
+		<scijava.app.directory>/Users/tischer/Desktop/Fiji-bdp2.app</scijava.app.directory>
 		<enforcer.skip>true</enforcer.skip>
 
 		<bioformats.version>6.1.0-m2</bioformats.version>
 		<ome.version>6.0.1</ome.version>
-		<imaris-writer.version>0.2.2</imaris-writer.version>
-		<imagej-utils.version>0.5.3</imagej-utils.version>
+		<imaris-writer.version>0.2.3</imaris-writer.version>
+		<imagej-utils.version>0.6.3</imagej-utils.version>
+
 	</properties>
 	<distributionManagement>
 		<repository>
